ajuste na estrutura do codigo e correcao do env

--- a/views/create.mustache
+++ b/views/create.mustache
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Criar Nova Página</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
   <h1>Criar Nova Página</h1>
