--- a/views/edit.mustache
+++ b/views/edit.mustache
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Editar Página</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <h1>Editar Página</h1>
