--- a/views/home.mustache
+++ b/views/home.mustache
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="home-wrapper">
   <h1>FastPages</h1>
