--- a/views/login.mustache
+++ b/views/login.mustache
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>Você precisa estar autenticado para criar e/ou editar páginas</h1>
