--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body {
+  header{
+    margin: 0 0 20px 0;
+    background-color: #4CAF50;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 0px;
+
+    h1{
+      margin: 0;
+      text-align: center;
+      color: white;
+    }
+
+    a{
+      padding: 0px 16px;
+    }
+  }
+
+  .logoHeader{
+    display: flex;
+    align-items: center;
+    padding: 0px 16px;
+  }
+
+  .logo{
+    height: 64px;
+    width: 64px;
+  }
+
+  body {
     font-family: Poppins, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
+    height: 100vh;
   }
   
   .home-wrapper {
@@ -14,15 +46,17 @@ body {
   }
 
   h1 {
-    background-color: #4CAF50;
+    /* background-color: #4CAF50;
     padding: 20px;
     text-align: center;
-    width: 100dvw;
+    width: 100dvw; */
     color: white;
   }
   
   form {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
   
   label {
@@ -31,9 +65,11 @@ body {
   }
   
   input, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 8px;
+    margin-bottom: 8px;
+    border: 1px solid #c8c8c8;
+    background: white;
+    border-radius: 8px;
   }
   
   button {
@@ -77,8 +113,74 @@ body {
   }
 
   .login-wrapper {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 400px;
+    height: 500px;
+    box-shadow: 4px 4px 15px #0000002e;
+    border-radius: 16px;
+    padding: 24px;
+
+    h1{
+      color: #4CAF50;
+    }
+  }
+
+  .loginBody{
+    display: flex;
+    background-color: #4CAF50;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .loginHeader{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 50dvw;
+    margin: 32px 0;
   }
+
+  .loginContent{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    p{
+      font-size: 10px;
+      color: gray;
+    }
+  }
+
+  .entrarSemLogin{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
+
+    a{
+      font-size: 12px;
+      text-decoration: none;
+      color: #4CAF50;
+    }
+  }
+
+  main{
+    background-color: white;
+    border: 1px solid rgb(214, 214, 214);
+    border-radius: 16px;
+    padding: 16px;
+    margin: 24px;
+  }
+
+  footer{
+    bottom: 0;
+    /* position: fixed; */
+    text-align: center;
+    width: 100%;
+  }
+
