--- a/views/create.mustache
+++ b/views/create.mustache
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Criar Nova Página</title>
   <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="../create.css">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-  <h1>Criar Nova Página</h1>
-  <form action="/admin/create" method="POST">
-    <label for="url">URL da Página:</label>
-    <input type="text" id="url" name="url" required>
-    
-    <label for="content">Conteúdo da Página:</label>
-    <textarea id="content" name="content" rows="10" required></textarea>
-    
-    <button type="submit">Criar Página</button>
-    {{#error}}
-      <span style="color: red; margin-left: 10px;">{{error}}</span>
-    {{/error}}
-  </form>
-  <a href="/">Voltar para Home</a>
+
+  <header>
+    <a href="/">
+      <div class="logoHeader">
+        <img class="logo" src="../fastpage-icon-white.png">
+        <h1>FastPages</h1>
+      </div>
+    </a>
+  </header>
+
+  <div class="create-container">
+
+    <h2>Criar Nova Página</h2>
+
+    <div class="create-form">
+
+      <form action="/admin/create" method="POST">
+        <label for="url">URL da Página:</label>
+        <input type="text" id="url" name="url" required>
+        
+        <label for="content">Conteúdo da Página:</label>
+        <textarea id="content" name="content" rows="10" required></textarea>
+        
+        <button type="submit">Criar Página</button>
+        {{#error}}
+          <span style="color: red;">{{error}}</span>
+        {{/error}}
+      </form>
+      <a href="/">Voltar para Home</a>
+
+    </div>
+
+  </div>
+
 </body>
 </html>
