--- a/views/edit.mustache
+++ b/views/edit.mustache
@@ -3,15 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>Editar Página</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../../style.css">
+  <link rel="stylesheet" type="text/css" href="../../edit.css">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-  <h1>Editar Página</h1>
-  <form action="/admin/edit/{{url}}" method="POST">
-    <label for="content">Conteúdo da Página:</label>
-    <textarea id="content" name="content" rows="10" required>{{content}}</textarea>
-    <button type="submit">Salvar Alterações</button>
-  </form>
-  <a href="/">Voltar para Home</a>
+  <header>
+    <a href="/">
+      <div class="logoHeader">
+        <img class="logo" src="../../fastpage-icon-white.png">
+        <h1>FastPages</h1>
+      </div>
+    </a>
+  </header>
+
+  <div class="edit-container">
+    <h2>Editar Página</h2>
+
+    <div class="edit-form">
+      <form action="/admin/edit/{{url}}" method="POST">
+        <label for="content">Conteúdo da Página:</label>
+        <textarea id="content" name="content" rows="10" style="resize: vertical;" required>{{content}}</textarea>
+        <button type="submit">Salvar Alterações</button>
+      </form>
+      <a href="/">Voltar para Home</a>
+    </div>
+
+  </div>
 </body>
 </html>
